# my-img-utilities

./: .gitignore  Cargo.toml
src/: arithmetic.rs  io.rs  main.rs  my_magick.rs  process.rs
src/cli/: mod.rs
src/cli/clap_parser/: parser.rs
src/cli/interactive/: autocompleter.rs  input.rs  mod.rs
src/filter/: gauss.rs  gaussian.rs  grayscale.rs  kuwahara.rs  mod.rs  mosaic.rs  truncate_color.rs
